# LLVM-compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  compileLLVM.sh
include/: classInfo.h  environment.h  lexer.h  parser.h  schemeLLVM.h
src/: main.cpp
